Additional java perms implementation, removed max perm size as a full setting